fix: add word wrap
In case user entered a long word it was getting out of bounds, now use word break, bug fixed

--- a/dashboard/src/app/line-of-boards/line-of-boards.component.css
+++ b/dashboard/src/app/line-of-boards/line-of-boards.component.css
@@ -43,5 +43,7 @@ hr{
 }
 
 .board p{
+  word-wrap: break-word;
+  background-color: blue;
   width:100%;
 }
